# phoenix

./: .gitignore  CMakeLists.txt
benchmarks/breakdown/: breakdown.cc
benchmarks/end-to-end/: end-to-end.cc
benchmarks/kvcache/: kvcache_reader.cc  kvcache_reader.hh
benchmarks/micro-benchmarks/: phxfs_test.cc
benchmarks/safetensor/: safetensors.cc
benchmarks/utils/: phxfs_utils.h
docs/: optimization2-todo.md
docs/tencent_env/: build_phoenix-guide.md  generate-data-file-guide.md  setup-module-guide.md  setup-nvme-raid0-guide.md  verify-io-correctness-guide.md
libphoenix/: integration.cc  phoenix.cc
libphoenix/include/: phoenix.h
module/: nvfs-pci.c  nvfs-pci.h  phxfs-mem.c  phxfs-mem.h  phxfs.c  phxfs.h
scripts/: setup_nvme_env.sh
scripts/tencent_env/: build_phoenix.sh  generate_data_file.sh  setup_nvme_raid0.sh  setup_phoenix_module.sh  verify_io_correctness.sh
tests/: test_regmem_io.cu  test_regmem_limit.cu
